dinoco_docs/src/content/v0.0.1/fr-fr/orm/update.mdx
export const title = "update";

# update

Utilisé pour mettre à jour les enregistrements filtrés.

---

## Ce que vous pouvez faire

- `.cond(...)`: définit les enregistrements à mettre à jour.
- `.values(item)`: spécifie les nouvelles valeurs de l'enregistrement.
- `.connect(...)`: crée des liens de relation pris en charge pour l'écriture.
- `.disconnect(...)`: supprime les liens de relation pris en charge pour l'écriture.
- `.returning::\<T\>()`: renvoie les enregistrements mis à jour dans une projection typée.
- `.execute(&client)`: exécute la mise à jour dans la base de données.

## Retour

Sans `.returning::\<T\>()`, le retour est :

```rust
DinocoResult<()>
```

Avec `.returning::\<T\>()`, le retour devient :

```rust
DinocoResult<Vec<T>>
```

Remarque :

- `update().returning()` ne prend pas en charge les écritures de relation avec `.connect(...)` ou `.disconnect(...)`.

## Exemple de mise à jour de champs

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .values(User {
        id: 10,
        email: "nouveau@acme.com".to_string(),
        name: "Nouveau Nom".to_string(),
    })
    .execute(&client)
    .await?;
```

## Exemple avec connect(...)

Utilisé pour connecter des relations prises en charge pour l'écriture, généralement Many to Many.

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .connect(|r| r.roles().slug.eq("admin"))
    .execute(&client)
    .await?;
```

## Exemple avec disconnect(...)

Utilisé pour déconnecter des relations.

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .disconnect(|r| r.roles().slug.eq("guest"))
    .execute(&client)
    .await?;
```

## Filtres disponibles dans connect et disconnect

- `eq`
- `neq`
- `gt`
- `gte`
- `lt`
- `lte`
- `in_values`
- `not_in_values`
- `is_null`
- `is_not_null`
- `includes`
- `starts_with`
- `ends_with`

## Prochaines étapes

- [**`update_many::\<M\>()`**](/v0.0.1/orm/update-many): mise à jour par lot.
- [**`find_and_update::\<M\>()`**](/v0.0.1/orm/find-and-update): mise à jour atomique avec retour.
